--- a/project/styles/_layout.scss
+++ b/project/styles/_layout.scss
@@ -2,15 +2,19 @@
     margin: 0;
     padding: 0;
 }
+a{
+    text-decoration: none;
+}
 html, body {
     width: 100%;
     height: 100%;
+    
 }
 .container {
-    width: 1100px;
+    width: 900px;
     margin: auto;
   
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: 900px) {
         width: 100%;
     }
 }
