--- a/project/styles/sections/_main.scss
+++ b/project/styles/sections/_main.scss
@@ -1,40 +1,51 @@
-
 .left_menu{
     width: 350px;
-    height: 625px;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     background-color: #002245;
     z-index: 15;
-    .logo{
-        padding: 60px;
-    }
+    padding-left: 40px;
+    padding-top: 50px;
+    
     .menu{
+        ul.nav_bar {
+            margin-top: 30px;
+            padding-right: 35px;
+            list-style: none;
+            font-family: mulish;
+        }
         li {
-            padding: 10px 59px;
+            padding: 10px 0px;
+            border-bottom: 1px solid grey;
+            line-height: 32px;
             a{
                 text-decoration: none;
                 color: #fff;
                 text-transform: capitalize;
+                font-size: 17px;
+                letter-spacing: .8px;
                 a.active{
                     color: #ff9800;
                 }
                 &:hover{
                     color: #ff9800;
+                    transition: 0.5s;
                 }
             }
         }
         
     }
     .icons{
-        padding: 59px 59px;
+        padding: 29px 0px;
         a{
             text-decoration: none;
             color: #fff;
             text-transform: capitalize;
             padding: 0 10px;
+            font-size: 17px;
             &:hover{
                 color: #ff9800;
             }
@@ -42,15 +53,17 @@
     }
 }
 .wrapper{
-        padding-left: 350px;    
-        .slider{
-            background-image: url(../images/6.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 100%;
-            height: 900px;
-            margin-top: -44px;
+    padding-left: 350px;    
+    .slider{
+        background-image: url(../images/6.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 900px;
+        margin-top: -44px;
+        .items{
+            padding-top: 44px;
             .img{
                 background-image: url(../images/3.jpg);
                 width: 200px;
@@ -82,18 +95,102 @@
                     font-family: montserrat;
                     padding: 13px 0px;
                 }
-            }
+            }    
         }
-        .about{
-            width: 300px;
-            height: 400px;
-            background-color: sandybrown;
-            .title{
-                display: inline-block;
-                font-size: 14px;
+        
+        
+    }
+    .about{
+        padding-left: 20px;
+        padding-top: 100px;
+        padding-bottom: 150px;
+        
+        .title{
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: 600;
+            color: #ff9800;
+            display: grid;
+            font-family: mulish;
+            span {
                 text-transform: uppercase;
-                font-weight: 500;
-                color: #ff9800;
+                font-weight: 700;
+                font-size: 35px;
+                font-family: 'Montserrat';
+                color: black;
+                padding: 15px 0;
             }
         }
+        .items{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            .about_right{
+                .right_title{
+                    margin-bottom: 30px;
+                    font-weight: 500;
+                    line-height: 1.4;
+                    font-family: 'Montserrat', sans-serif;
+                    color: #000;
+                    font-size: 20px;
+                    span{
+                        color: $orenge-color;
+                    }
+                }
+                .text{
+                    font-size: 16px;
+                    line-height: 2;
+                    letter-spacing: .8px;
+                    font-weight: 400;
+                    color: $dark;
+                    font-family: 'Mulish';
+                    span{
+                        color: $orenge-color;
+                    }
+                }
+                .about_info {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    .information_list{
+                        margin-top: 20px;
+                        .main_about {
+                            display: grid;
+                            grid-template-columns: 1fr 3fr 5fr;
+                            margin: 15px 0;
+                            font-family: 'Mulish';
+                            i{
+                                color: #ff9800;
+                                font-size: 20px;
+                            }
+                            h5{
+                                font-size: 16px;
+                            }
+                            span .date{
+                                font-size: 18px;
+                            }
+                        }
+                    }
+                }
+            }
+            
+            .item {
+                width: 388px;
+                height: 400px;
+                border: 10px solid #000;
+                position: relative;
+                border-radius: 6px;
+                .image{
+                    position: absolute;
+                    top: -20px;
+                    left: -11px;
+                    img{
+                        object-fit: cover;
+                        width: 370px;
+                        height: 401px;
+                        border-radius: 7px;
+                    }
+                }
+            }
+            
+        }
+    }
 }
