--- a/project/styles/common/_mixin.scss
+++ b/project/styles/common/_mixin.scss
@@ -7,7 +7,13 @@
     display: grid;
     font-family: mulish;
 }
-@mixin text {
+@mixin span_title {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 35px;
+    font-family: 'Montserrat';
+    color: black;
+    padding: 15px 0;
     
 }
 @mixin center {
