--- a/project/styles/sections/_main.scss
+++ b/project/styles/sections/_main.scss
@@ -56,7 +56,7 @@
 .wrapper{
     padding-left: 350px;    
     .slider{
-        background-image: url(../images/6.jpg);
+        background-image: linear-gradient(rgba(0, 34, 69, 0.5), rgba(0, 34, 69, 0.5)),url(../images/6.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -499,6 +499,9 @@
                     height: 250px;
                     object-fit: cover;
                     transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
+                    &:hover{
+                        transform: rotate(15deg) scale(1.4);
+                    }
                 }
             }
             .card_body{
